--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~46.0.13",
     "expo-constants": "^13.2.4",
     "expo-status-bar": "~1.4.0",
+    "formik": "^2.2.9",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0"
