--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "formik": "^2.2.9",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-gesture-handler": "~2.5.0"
+    "react-native-gesture-handler": "~2.5.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
