--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-native-community/hooks": "^2.8.1",
     "expo": "~46.0.13",
     "expo-constants": "^13.2.4",
+    "expo-image-picker": "~13.3.1",
+    "expo-permissions": "^13.2.0",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
     "react": "18.0.0",
