--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
   },
   "dependencies": {
     "@react-native-community/hooks": "^2.8.1",
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.10",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/native-stack": "^6.9.4",
     "expo": "~46.0.13",
     "expo-constants": "^13.2.4",
     "expo-image-picker": "~13.3.1",
+    "expo-location": "~14.3.0",
     "expo-permissions": "^13.2.0",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-paper": "^5.1.0",
+    "react-native-vector-icons": "^9.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
