--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.10",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
+    "apisauce": "^2.1.6",
     "expo": "~46.0.13",
     "expo-constants": "^13.2.4",
     "expo-image-picker": "~13.3.1",
